include(../cmake_conf/gtest_conf.cmake)

project(server)

# add_library(${PROJECT_NAME} SHARED)
# target_sources(${PROJECT_NAME}
#     PRIVATE
#         ${CMAKE_CURRENT_SOURCE_DIR}/src
# )

# target_include_directories(${PROJECT_NAME}
#     INTERFACE
#         ${CMAKE_CURRENT_SOURCE_DIR}/include
# )